:art: Prevent overflow of hidden text

--- a/datepicker/_datepicker.scss
+++ b/datepicker/_datepicker.scss
@@ -59,6 +59,7 @@ $size: 2.5em;
     border-radius: 50%;
     color: transparent;
     height: $size;
+    overflow: hidden;
     position: absolute;
     right: 0;
     top: 0;
